Modify: run testhh

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: Run install test
       - run:
           command: yarn build
-          name: Build app test
+          name: Build app testhh
       - persist_to_workspace:
           root: ~/project
           paths:
